--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,6 @@
 .menu{
   padding: 10px;
-  width: 100vw;
+  /* width: 100vw; */
   max-height: 120px;
   min-height: 30px;
   display: flex;
